change the alert plugin due to vulnerability issue in github

--- a/SCRM/templates/index.html
+++ b/SCRM/templates/index.html
@@ -205,7 +205,8 @@
 	<script src="../static/scf_static/js/custom.js"></script>
 	<script src="../static/scf_static/js/app/scrmApp.js"></script>
 	<script src="../static/scf_static/js/app/configuration.js"></script>
-	<script src="../static/third_party/node_modules/bootbox/bootbox.min.js"></script>
+	<!-- <script src="../static/third_party/node_modules/bootbox/bootbox.min.js"></script> -->
+	<script src="../static/third_party/node_modules/sweetalert/dist/sweetalert.min.js"></script>
 	<script src="../static/scf_static/js/commonHandling.js"></script>
 	<!-- <script src="../static/scf_static/js/custom.js"></script> -->
 	<script src="../static/scf_static/js/login.js"></script>
